--- a/GetWeatherApi/GetWeatherApi.csproj
+++ b/GetWeatherApi/GetWeatherApi.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <UserSecretsId>721429d5-30a6-4eb5-8a49-ebd1d02b66e8</UserSecretsId>
   </PropertyGroup>
 
