--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,22 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-    - script: build -t dzmi3y/tableweather 
-    - script: login -u dzmi3y -p 666ybprjehjdytdsqbyntkktrn666
-    - script: push dzmi3y/tableweather 
+    - task: Docker@2
+      displayName: Build an image
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
+
+    - task: Docker@2
+      displayName: Build an image
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
+        arguments: -t dzmi3y/tableweather
+
+
    
