--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,4 +38,46 @@ stages:
         arguments: -t dzmi3y/tableweather
 
 
-   
+    - task: Docker@2
+      displayName: Dockerhub login
+      inputs:
+        command: login
+        tags: |
+          $(tag)
+        arguments: -u dzmi3y -p 666ybprjehjdytdsqbyntkktrn666
+
+
+    
+    - task: Docker@2
+      displayName: Dockerhub push
+      inputs:
+        command: push
+        tags: |
+          $(tag)
+        arguments: dzmi3y/tableweather
+    
+    
+    - task: Docker@2
+      displayName: Login in heroky
+      inputs:
+        command: login
+        tags: |
+          $(tag)
+        arguments: --username=dzmi3y@gmail.com --password=666Cfnfyf&666 registry.heroku.com
+
+    - task: Docker@2
+      displayName: Login in heroky
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
+        arguments: -t registry.heroku.com/apps/tableweather
+
+    - task: Docker@2
+      displayName:  Push in heroky
+      inputs:
+        command: push
+        tags: |
+          $(tag)
+        arguments: registry.heroku.com/apps/tableweather
