--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,67 +1,8 @@
-# Docker
-# Build a Docker image 
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
- 
-
-    - task: Docker@2
-      displayName: Dockerhub login
-      inputs:
-        command: login
-        tags: |
-          $(tag)
-        arguments: {u:'dzmi3y' ,p :'666ybprjehjdytdsqbyntkktrn666'}
-
-
-    
-    - task: Docker@2
-      displayName: Dockerhub push
-      inputs:
-        command: push
-        tags: |
-          $(tag)
-        arguments: dzmi3y/tableweather
-    
-    
-    - task: Docker@2
-      displayName: Login in heroky
-      inputs:
-        command: login
-        tags: |
-          $(tag)
-        arguments: --username=dzmi3y@gmail.com --password=666Cfnfyf&666 registry.heroku.com
-
-    - task: Docker@2
-      displayName: Build in heroky
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
-        arguments: -t registry.heroku.com/apps/tableweather
-
-    - task: Docker@2
-      displayName:  Push in heroky
-      inputs:
-        command: push
-        tags: |
-          $(tag)
-        arguments: registry.heroku.com/apps/tableweather
+steps:
+    - script: |
+        docker build -t $(dockerId)/$(imageName)  
+        docker login -u $(dockerId) -p $(passwordDocker)
+        docker push dzmi3y/tableweather 
+        docker login --username=_ --password=$(token) registry.heroku.com
+        docker build -t registry.heroku.com/apps/tableweather
+        docker push registry.heroku.com/apps/tableweather	
