--- a/GetWeatherApi/Dockerfile
+++ b/GetWeatherApi/Dockerfile
@@ -18,3 +18,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "GetWeatherApi.dll"]
+CMD dotnet /app/GetWeatherApi.dll
